# lunacid-clone

./: Cargo.toml
.claude/: settings.local.json
assets/data/enemies/: orc.ron
assets/data/levels/: compact_quarters.level.ron  level1.level.ron  ruined_temple.level.ron  test_multifloor.level.ron
assets/data/palettes/: dungeon_ambient.ron  dungeon_ceiling.ron  dungeon_geometry.ron  dungeon_monsters.ron
assets/data/rendering/: visual_config.ron
assets/shaders/: post_process.wgsl
src/: lib.rs  main.rs
src/combat/: components.rs  mod.rs  plugin.rs  systems.rs  viewmodel.rs
src/core/: events.rs  mod.rs  plugin.rs  states.rs  tween.rs
src/enemies/: ai.rs  animation.rs  components.rs  data.rs  mod.rs  plugin.rs  spawning.rs
src/player/: components.rs  mod.rs  movement.rs  plugin.rs
src/rendering/: mod.rs  plugin.rs  post_process.rs  visual_config.rs
src/ui/: hud.rs  mod.rs  plugin.rs
src/world/: builder.rs  data.rs  error.rs  geometry.rs  materials.rs  mod.rs  plugin.rs  prefabs.rs  spawning.rs
